java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting8/ModulesNotSupported.java
<error descr="Modules are not supported at language level '8'">module M {
  requires A;
}</error>